[tool.poetry]
name = "f1news"
version = "0.1.0"
description = "Honza Javorek's personal F1 news feed"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]
license = "AGPL-3.0-only"
readme = "README.md"

[tool.poetry.scripts]
f1news = "f1news.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.2.1"
feedparser = "^6.0.11"
httpx = "^0.28.1"
lxml = "^6.0.1"
praw = "^7.8.1"
stamina = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
